Add GUI interface